--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -239,7 +239,9 @@ span.text-line{
   margin-bottom: 50px;
 }
 /* Button/link styles */
-
+.btn-my-list{
+  margin-top: 20px;
+}
 .btn-custom {
   color: darken(#f1c40f, 5%);
   background-color: #fff;
