--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,5 +25,10 @@
     <% end %>
   <div id="modal-window" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" ></div>
   </div>
+  <div class="col-md-10">
+   <h2>My List Hotel</h2>
+  <%= render partial: "users/motel", collection:@user.motels%> 
+
+  </div>
 </div>
 
